force-app/main/default/objects/ZRH_DiccionarioPoblacionDatosJSON__mdt/ZRH_DiccionarioPoblacionDatosJSON__mdt.object-meta.xml
<CustomObject>
    <description>Se guardan los parametros para poblar campos Salesforce desde un JSON</description>
    <label>Diccionario de Población de datos JSON</label>
    <pluralLabel>Diccionario de Población de datos JSON</pluralLabel>
</CustomObject>