force-app/main/default/objects/ZRH_DiccionarioPoblacionDatosJSON__mdt/fields/ZRH_Activo__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Activo__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indica si el registro esta activo para procesarlo</description>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>