force-app/main/default/objects/ZRH_DiccionarioPoblacionDatosJSON__mdt/fields/ZRH_CampoDestino__c.field-meta.xml
<CustomField>
    <fullName>ZRH_CampoDestino__c</fullName>
    <label>Campo Destino</label>
    <length>100</length>
    <type>Text</type>
</CustomField>