force-app/main/default/objects/ZRH_DiccionarioPoblacionDatosJSON__mdt/fields/ZRH_CampoJSON__c.field-meta.xml
<CustomField>
    <fullName>ZRH_CampoJSON__c</fullName>
    <label>Campo JSON</label>
    <length>100</length>
    <type>Text</type>
</CustomField>