force-app/main/default/objects/ZRH_DiccionarioPoblacionDatosJSON__mdt/fields/ZRH_CondicionDos__c.field-meta.xml
<CustomField>
    <fullName>ZRH_CondicionDos__c</fullName>
    <description>Condición para filtrar y extraer los campos de un objeto</description>
    <label>Condición dos</label>
    <length>100</length>
    <type>Text</type>
</CustomField>