force-app/main/default/objects/ZRH_DiccionarioPoblacionDatosJSON__mdt/fields/ZRH_Nodo__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Nodo__c</fullName>
    <description>Identifica el nodo que se requiere procesar</description>
    <label>Nodo</label>
    <length>25</length>
    <type>Text</type>
</CustomField>