force-app/main/default/objects/ZRH_DiccionarioPoblacionDatosJSON__mdt/fields/ZRH_NombreAtributo__c.field-meta.xml
<CustomField>
    <fullName>ZRH_NombreAtributo__c</fullName>
    <label>Nombre del Atributo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>