force-app/main/default/objects/ZRH_DiccionarioPoblacionDatosJSON__mdt/fields/ZRH_Objeto__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Objeto__c</fullName>
    <label>Objeto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QuoteLineItem</fullName>
                <default>true</default>
                <label>QuoteLineItem</label>
            </value>
            <value>
                <fullName>ContractGroupPlan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>