force-app/main/default/objects/ZRH_DiccionarioPoblacionDatosJSON__mdt/fields/ZRH_ValorCondicion__c.field-meta.xml
<CustomField>
    <fullName>ZRH_ValorCondicion__c</fullName>
    <description>Valor que determina la condición para filtrar y extraer los campos de un objeto.</description>
    <label>Valor condición</label>
    <length>100</length>
    <type>Text</type>
</CustomField>