force-app/main/default/objects/ZRH_DiccionarioPoblacionDatosJSON__mdt/fields/ZRH_ValorCondicionDos__c.field-meta.xml
<CustomField>
    <fullName>ZRH_ValorCondicionDos__c</fullName>
    <description>Valor que determina la condición para filtrar y extraer los campos de un objeto.</description>
    <label>Valor condición dos</label>
    <length>100</length>
    <type>Text</type>
</CustomField>