force-app/main/default/objects/ZRH_DiccionarioPoblacionDatosJSON__mdt/listViews/ZRH_TodosPersonalizado.listView-meta.xml
<ListView>
    <fullName>ZRH_TodosPersonalizado</fullName>
    <columns>MasterLabel</columns>
    <columns>ZRH_Activo__c</columns>
    <columns>ZRH_Objeto__c</columns>
    <columns>ZRH_CampoDestino__c</columns>
    <columns>ZRH_Nodo__c</columns>
    <columns>ZRH_CampoJSON__c</columns>
    <columns>ZRH_NombreAtributo__c</columns>
    <columns>ZRH_Condicion__c</columns>
    <columns>ZRH_ValorCondicion__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos Personalizado</label>
    <language>es</language>
</ListView>